[gd_scene load_steps=10 format=3 uid="uid://dtvf77eetgnbh"]

[ext_resource type="Script" uid="uid://cukl2ju6ehwm5" path="res://ui/loadout_picker.gd" id="1_wg41j"]
[ext_resource type="FontFile" uid="uid://c2f72s2s2idlj" path="res://art/open_sans/static/OpenSans-ExtraBold.ttf" id="2_5r45n"]
[ext_resource type="PackedScene" uid="uid://c258ftohgh8ui" path="res://ui/weapon_selector.tscn" id="3_5r45n"]
[ext_resource type="PackedScene" uid="uid://8lbbbwe2ufow" path="res://weapons/gun_rocket.tscn" id="4_soyi7"]
[ext_resource type="PackedScene" uid="uid://bflnfy31fb7gf" path="res://weapons/gun_mortar.tscn" id="5_5flcr"]
[ext_resource type="PackedScene" uid="uid://dt6b11m3vfhxj" path="res://weapons/gun_blocks.tscn" id="6_d5rls"]

[sub_resource type="FontVariation" id="FontVariation_ebnsr"]
base_font = ExtResource("2_5r45n")
spacing_glyph = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7knb5"]
content_margin_left = 16.0
content_margin_right = 16.0
bg_color = Color(0, 0.423529, 0.917647, 1)
border_width_top = 8
border_color = Color(0.258824, 0.258824, 0.258824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_soyi7"]
content_margin_left = 16.0
content_margin_right = 16.0
bg_color = Color(0, 0.423529, 0.917647, 0.211765)
border_width_top = 8
border_color = Color(0.258824, 0.258824, 0.258824, 1)

[node name="LoadoutPicker" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
script = ExtResource("1_wg41j")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -164.0
offset_right = 332.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="EquippedWeapons" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Lbl" type="Button" parent="MarginContainer/EquippedWeapons" groups=["menu_control"]]
process_mode = 4
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_fonts/font = SubResource("FontVariation_ebnsr")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_7knb5")
text = "Weapon Slots"

[node name="Container" type="HBoxContainer" parent="MarginContainer/EquippedWeapons"]
layout_mode = 2
size_flags_stretch_ratio = 2.0

[node name="ControlsSlot1" type="HBoxContainer" parent="MarginContainer/EquippedWeapons/Container"]
layout_mode = 2

[node name="Slot1" type="Button" parent="MarginContainer/EquippedWeapons/Container/ControlsSlot1" groups=["menu_control"]]
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_colors/font_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_fonts/font = SubResource("FontVariation_ebnsr")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_soyi7")
text = "Empty"
autowrap_mode = 1

[node name="ControlsSlot2" type="HBoxContainer" parent="MarginContainer/EquippedWeapons/Container"]
layout_mode = 2

[node name="Slot2" type="Button" parent="MarginContainer/EquippedWeapons/Container/ControlsSlot2" groups=["menu_control"]]
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_colors/font_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_fonts/font = SubResource("FontVariation_ebnsr")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_soyi7")
text = "Empty"
autowrap_mode = 1

[node name="ControlsSlot3" type="HBoxContainer" parent="MarginContainer/EquippedWeapons/Container"]
layout_mode = 2

[node name="Slot3" type="Button" parent="MarginContainer/EquippedWeapons/Container/ControlsSlot3" groups=["menu_control"]]
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_colors/font_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_fonts/font = SubResource("FontVariation_ebnsr")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_soyi7")
text = "Empty"
autowrap_mode = 1

[node name="ControlsSlot4" type="HBoxContainer" parent="MarginContainer/EquippedWeapons/Container"]
layout_mode = 2

[node name="Slot4" type="Button" parent="MarginContainer/EquippedWeapons/Container/ControlsSlot4" groups=["menu_control"]]
custom_minimum_size = Vector2(160, 80)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_colors/font_color = Color(0.258824, 0.258824, 0.258824, 1)
theme_override_fonts/font = SubResource("FontVariation_ebnsr")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_soyi7")
text = "Empty"
autowrap_mode = 1

[node name="WeaponPicker" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/WeaponPicker"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 32

[node name="WeaponSelector" parent="MarginContainer/WeaponPicker/HBoxContainer" instance=ExtResource("3_5r45n")]
layout_mode = 2

[node name="WeaponSelector2" parent="MarginContainer/WeaponPicker/HBoxContainer" instance=ExtResource("3_5r45n")]
layout_mode = 2

[node name="WeaponSelector3" parent="MarginContainer/WeaponPicker/HBoxContainer" instance=ExtResource("3_5r45n")]
layout_mode = 2

[node name="GunPivot" type="Node3D" parent="."]
visible = false

[node name="GunRocket" parent="GunPivot" instance=ExtResource("4_soyi7")]

[node name="GunMortar" parent="GunPivot" instance=ExtResource("5_5flcr")]

[node name="GunBlocks" parent="GunPivot" instance=ExtResource("6_d5rls")]

[connection signal="pressed" from="MarginContainer/EquippedWeapons/Container/ControlsSlot1/Slot1" to="." method="_on_slot_1_pressed"]
[connection signal="pressed" from="MarginContainer/EquippedWeapons/Container/ControlsSlot2/Slot2" to="." method="_on_slot_2_pressed"]
[connection signal="pressed" from="MarginContainer/EquippedWeapons/Container/ControlsSlot3/Slot3" to="." method="_on_slot_3_pressed"]
[connection signal="pressed" from="MarginContainer/EquippedWeapons/Container/ControlsSlot4/Slot4" to="." method="_on_slot_4_pressed"]
